[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "abcd-clsloss"
version = "0.1.0"
description = "Differentiable CLs loss for ABCD with implicit differentiation through profile-likelihood fits"
authors = [{name = "ABCD-CLsLoss Authors"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "numpy",
    "iminuit",
]

[project.urls]
Homepage = "https://github.com/your-org/abcd-clsloss"
